[project]
name = "caen_libs"
authors = [
	{ name="Giovanni Cerretani" },
]
description = "Official Python binding for CAEN VMELib, CAEN Comm, CAEN PLU and CAEN HV Wrapper libraries."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
	"Natural Language :: English",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Scientific/Engineering :: Physics",
	"Typing :: Typed",
]
dependencies = [
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "caen_libs.__version__"}

[project.urls]
Homepage = "https://www.caen.it"
Support = "https://www.caen.it/mycaen/support/"
