[project]
name = "caen_libs"
authors = [
	{ name="Giovanni Cerretani" },
]
description = "Official Python binding for CAEN VMELib, CAEN Comm, CAEN PLU, CAEN HV Wrapper and CAEN DPP Library."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
	"Natural Language :: English",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Scientific/Engineering :: Physics",
	"Typing :: Typed",
]
dependencies = [
	"numpy>=1.20",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "caen_libs.__version__"}

[project.urls]
Homepage = "https://www.caen.it"
Support = "https://www.caen.it/mycaen/support/"
Source = "https://github.com/caenspa/py-caen-libs"
Changelog  = "https://github.com/caenspa/py-caen-libs/blob/main/PYCHANGELOG"
